[tool.poetry]
name = "nb_utils"
version = "0.1.0"
description = "Python utilities"
authors = ["Nivratti <boyanenivratti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
